{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 4,
  "lineage": "3704ac12-67a3-fba0-9f3f-7a041b8e5804",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rdp_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-0d23c28e0e5fda415",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "RDP from allowed CIDR - Security Autopilot",
            "from_port": 3389,
            "id": "sgr-0d23c28e0e5fda415",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-06f6252fa8a95b61d",
            "security_group_rule_id": "sgr-0d23c28e0e5fda415",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696505809372",
            "id": "sgr-0d23c28e0e5fda415",
            "region": "eu-north-1"
          },
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-0d737cd6c34c0770f",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "SSH from allowed CIDR - Security Autopilot",
            "from_port": 22,
            "id": "sgr-0d737cd6c34c0770f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-06f6252fa8a95b61d",
            "security_group_rule_id": "sgr-0d737cd6c34c0770f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696505809372",
            "id": "sgr-0d737cd6c34c0770f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    }
  ]
}